tests/ui/macros/assert-trailing-junk.without-generic-asset.stderr
error: expected one of `,`, `.`, `?`, or an operator, found `some`
  --> $DIR/assert-trailing-junk.rs:10:18
   |
LL |     assert!(true some extra junk, "whatever");
   |                  ^^^^ expected one of `,`, `.`, `?`, or an operator

error: expected one of `,`, `.`, `?`, or an operator, found `some`
  --> $DIR/assert-trailing-junk.rs:13:18
   |
LL |     assert!(true some extra junk);
   |                  ^^^^ expected one of `,`, `.`, `?`, or an operator

error: no rules expected `blah`
  --> $DIR/assert-trailing-junk.rs:16:30
   |
LL |     assert!(true, "whatever" blah);
   |                             -^^^^ no rules expected this token in macro call
   |                             |
   |                             help: missing comma here
   |
   = note: while trying to match sequence start

error: unexpected string literal
  --> $DIR/assert-trailing-junk.rs:19:18
   |
LL |     assert!(true "whatever" blah);
   |                 -^^^^^^^^^^
   |                 |
   |                 help: try adding a comma

error: no rules expected `blah`
  --> $DIR/assert-trailing-junk.rs:19:29
   |
LL |     assert!(true "whatever" blah);
   |                            -^^^^ no rules expected this token in macro call
   |                            |
   |                            help: missing comma here
   |
   = note: while trying to match sequence start

error: macro requires an expression as an argument
  --> $DIR/assert-trailing-junk.rs:23:5
   |
LL |     assert!(true;);
   |     ^^^^^^^^^^^^-^
   |                 |
   |                 help: try removing semicolon

error: unexpected string literal
  --> $DIR/assert-trailing-junk.rs:26:27
   |
LL |     assert!(false || true "error message");
   |                          -^^^^^^^^^^^^^^^
   |                          |
   |                          help: try adding a comma

error: aborting due to 7 previous errors

